# SMILESRender

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DADOS_Uminho_1.csv  DOCUMENTATION.md  Dockerfile  JCheminform_SmileRender_Final_v2.md  JCheminform_SmileRender_Final_v3.md  JCheminform_SmileRender_Final_v4.md  JCheminform_SmileRender_Final_v5.md  JCheminform_SmileRender_SciRep_v1.md  JCheminform_SmileRender_SciRep_v1_tmp.md  Manuscript_SMILESRender.md  Manuscript_SmileRender.md  PROJECT_STATUS.md  Paper_SMILESRender.md  Paper_SmileRender.md  Papper.docx  README.md  SGLT2_ADMET_Results.xlsx  SGLT2_approved.xlsx  SGLT2_output.txt  SMILESRender_Descriptors_Table.md  SMILESRender_JCheminform_2026.docx  SMILESRender_JCheminform_2026_SciRep_v1.docx  SMILESRender_JCheminform_2026_v3.docx  SMILESRender_JCheminform_2026_v4.docx  SMILESRender_manuscript_final.docx  SmileRender_JCheminform.docx  admet_cols.txt  admetlab_output.html  analysis_report.md  analyze_sglt2.py  benchmark_20drugs.py  benchmark_results.txt  benchmark_vs_competitors.py  (+26 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/admin-api/: Dockerfile  adonisrc.ts  package.json  tsconfig.json
apps/admin-api/config/: app.ts  database.ts
apps/admin-api/start/: env.ts  kernel.ts  routes.ts
apps/admin-web/: Dockerfile  index.html  package.json  vite.config.ts
apps/admin-web/src/: App.tsx  LoginPage.tsx
apps/api/: Dockerfile  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: main.ts
scratch/: list_properties.py  test_admet_ai.py  verify_chemprop.py
src/: admet_interpreter.py  admin.py  bbb_model.pkl  converter.py  docking_routes.py  docking_utils.py  game_routes.py  generation_routes.py  libprep_engine.py  main.py  peptide_utils.py  plip_runner.py  routes.py  tasks.py  tools.py  train_bbb_model.py  train_error.txt  train_tox21.py  train_transdermal_model.py  transdermal_model.pkl
src/frontend/: App.tsx
src/frontend/components/: ADMETlab.tsx  AppleDock.tsx  AtomicBackground.tsx  BodyMapDecision.tsx  Dashboard.tsx  DeepADMET.tsx  DiscoverGrid.tsx  Footer.tsx  GraphB3.tsx  Header.tsx  MolImage.tsx  MoleculeDrawerModal.tsx  PKCSM.tsx  PageShell.tsx  PersistentTaskbar.tsx  Prediction.tsx  ProTox.tsx  RDKitFilters.tsx  Section.tsx  Tox21.tsx  (+7 more)
src/static/: example_molecules.csv  global.css  styles.css
src/templates/: index.html
tests/: conftest.py  test_api.py  test_converter.py  test_generation.py  test_smilesrender_full.py
tmp/: descriptors_data.json  descriptors_list.md  list_descriptors.py  list_descriptors_json.py  stoptox_success.html  swissadme_fail.html  swissadme_fail_v3.html  test_admetlab.py  test_admetlab2.py  test_concurrency.py  test_concurrency2.py  test_desc.py  test_env.py  test_load_model.py  test_molecules.py  test_molecules_fast.py  test_pkcsm_table.py  test_protox.py  test_protox2.py  test_stoptox.py  test_stoptox_final.py  test_swissadme.py  test_swissadme_final.py  test_swissadme_v2.py  test_swissadme_v3.py  update_docx.py  verify_sync.py
(+35 files in other folders)
