[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smilesrender"
version = "2.0.0"
description = "Unified cheminformatics platform: SMILES rendering, ADMET profiling, molecular docking and more"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Carlos Seiti Shiraishi", email = "carlos.seiti.shiraishi@gmail.com" }
]
keywords = ["cheminformatics", "SMILES", "ADMET", "molecular-docking", "drug-discovery", "RDKit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "waitress>=3.0.1",
    "python-dotenv>=1.0.1",
    "rdkit>=2024.3.6",
    "pillow>=11.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "reportlab>=4.4.10",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "scikit-learn",
    "PepLink>=0.1.0",
]

[project.optional-dependencies]
ml = [
    "torch",
    "torchvision",
    "torchaudio",
    "admet-ai",
    "chemprop",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-flask>=1.3",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "mypy>=1.10",
    "httpx>=0.27",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://smiles-render.onrender.com"
Repository = "https://github.com/shiraishicarlos/smilesrender"
Documentation = "https://shiraishicarlos.github.io/smilesrender"
"Bug Tracker" = "https://github.com/shiraishicarlos/smilesrender/issues"

[project.scripts]
smilesrender = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-length handled by formatter
    "B008",  # function call in default args (Flask patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml -v"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/static/*", "src/templates/*", "src/train_*.py"]

[tool.coverage.report]
fail_under = 30

# --- Mypy ---
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
